--- a/Components/Pages/Counter.razor
+++ b/Components/Pages/Counter.razor
@@ -7,13 +7,70 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="() => currentCount++">Click me</button>
+
+<div class="m-4">
+	<input type="text" @bind="text" @bind:event="oninput" @bind:after="Search" />
+	<p>@text</p>
+</div>
+<p>@result</p>
+
+<div style="border: 1px solid black" @onmouseover="MouseOver" @onmouseout="MouseOut">
+	<p>@divText</p>
+</div>
+
+<div class="m-4">
+	<input type="text" @onfocus="HandleFocus" @onblur="HandleBlur" />
+	<p>@focusText</p>
+</div>
 
 @code {
-    private int currentCount = 0;
+	private int currentCount = 0;
 
-    private void IncrementCount()
-    {
-        currentCount++;
-    }
+	[Parameter]
+	public int IncrementAmount { get; set; } = 1;
+
+	public string text = "";
+	public string result = "";
+	public string keyboardKeyText = "";
+	public string divText = "";
+	public string focusText = "";
+
+
+	private void IncrementCount()
+	{
+		currentCount += IncrementAmount;
+	}
+
+
+	private void HandleInput(ChangeEventArgs args)
+	{
+		text = args.Value!.ToString()!;
+	}
+
+	private void MouseOver(MouseEventArgs args)
+	{
+		divText = "You are hovering over the div";
+	}
+	private void MouseOut(MouseEventArgs args)
+	{
+		divText = "";
+	}
+
+
+	private void HandleFocus(FocusEventArgs args)
+	{
+		focusText = "You are typing ...";
+	}
+
+	private void HandleBlur(FocusEventArgs args)
+	{
+		focusText = "You are not typing. You have clicked away.";
+	}
+
+	async Task Search()
+	{
+		await Task.Delay(3000);
+		result = "150 results were found!";
+	}
 }
