--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">GameMatcher</a>
+        <a class="navbar-brand" href="">Steam Game Matcher</a>
     </div>
 </div>
 
