--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -83,11 +83,11 @@
 <h3>Friends Result</h3>
 
 <div class="container-sm">
-	<div class="row row-cols-lg-6 row-cols-2">
+	<div class="row row-cols-lg-6 row-cols-4 g-4">
 		@foreach (PlayerSummary p in friendSummaries)
 		{
 			<div class="col">
-				<FriendCard AvatarSource="@p.AvatarFull" Name="@p.PersonaName" Status="@status[p.PersonaState]"></FriendCard>
+				<FriendCard AvatarSource="@p.AvatarFull" Name="@p.PersonaName" Status="@status[p.PersonaState]" ProfileUrl="@p.ProfileUrl"></FriendCard>
 			</div>
 		}
 	</div>
