--- a/Components/Reusable/FriendCard.razor
+++ b/Components/Reusable/FriendCard.razor
@@ -1,11 +1,13 @@
-﻿<div class="card h-100">
+﻿@inject SteamService SteamService
+
+<div class="card h-100">
 	<img class="card-img-top" src="@AvatarSource" alt="Avatar" />
 	<div class="card-body">
 		<h5 class="card-title">@Name</h5>
 		<span class="card-subtitle">@Status</span>
 	</div>
 	<div class="card-footer">
-		<button class="btn btn-primary">Compare</button>
+		<button class="btn btn-primary" type="button" @onclick="OnCompareClick">Compare</button>
 		<a class="btn btn-primary" href="@ProfileUrl" target="_blank" rel="noopener noreferrer">View Profile</a>
 	</div>
 </div>
@@ -22,4 +24,16 @@
 
 	[Parameter]
 	public string ProfileUrl { get; set; } = string.Empty;
+
+	[Parameter]
+	public string SteamId { get; set; } = string.Empty;
+
+	[Parameter]
+	public EventCallback<string> OnCompareCallback { get; set; }
+
+	// Calls the parent's method 'GetOwnedGames'
+	private async Task OnCompareClick()
+	{
+		await OnCompareCallback.InvokeAsync(SteamId);
+	}
 }
