--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -79,10 +79,17 @@
 <hr />
 
 <div class="container">
-	@foreach (OwnedGame game in Games)
-	{
-		<p>@game.AppId | @game.Name | @(Math.Round(game.TotalPlaytime / 60.0, 1)) hours | @game.ImageHash </p>
-	}
+	<div class="row row-cols-4">
+		@foreach (OwnedGame game in Games)
+		{
+			<div class="col">
+				@* <p>@game.AppId | @game.Name | @(Math.Round(game.TotalPlaytime / 60.0, 1)) hours | @game.ImageHash </p> *@
+				<img src="@($"https://media.steampowered.com/steamcommunity/public/images/apps/{@game.AppId}/{game.ImageHash}.jpg")" />
+				<p>@game.Name</p>
+				<p>@(Math.Round(game.TotalPlaytime / 60.0, 1)) hours</p>
+			</div>
+		}
+	</div>
 </div>
 
 <div class="container-sm">
