Updated regex pattern.

--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -127,7 +127,7 @@
 
 	string lookupID = "76561198063946970";
 
-	string idPattern = @"^\d{17}";
+	string idPattern = @"^\d{17}$";
 
 	Dictionary<int, string> status = new Dictionary<int, string>()
 	{
